--- a/index.html
+++ b/index.html
@@ -478,18 +478,19 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="footer-container-footer">
-        <p class="footer-text">Subscribe</p>
-        <form class="footer-form"  name="subscribe-form">
-          <label class="footer-label" for="user-email" hidden>E-mail</label>
-          <input class="footer-input" type="text" id="email" name="email" placeholder="E-mail"/>
+        <div class="footer-container-footer">
+         <p class="footer-text">Subscribe</p>
+         <form class="footer-form"               name="subscribe-form">
+           <label class="footer-label" for="user-email"   hidden>E-mail</label>
+           <input class="footer-input" type="text"  id="email" name="email" placeholder="E-mail"/>
           <button class="footer-btn" type="submit">
             Subscribe
-            <svg class="footer-btn-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-icon-send"></svg>
+           <svg class="footer-btn-icon" width="24"  height="24">
+            <use href="./images/icons. svg#icon-icon-send">
+            </svg>
           </button>
-        </form>
+         </form>
+        </div>
       </div>
     </footer>
 
@@ -507,7 +508,7 @@
           Leave your contacts and we will call you back
         </p>
 
-        <form class="modal-form" name="review">
+        <form class="modal-form"  name="review">
           <div class="modal-form-field">
            <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-wrapper">
@@ -542,22 +543,22 @@
           </div>
 
           <div class="form-agreement">
-            <input type="checkbox" name="user-agreement" id="user-agreement" checked/>
-            <label for="agreement-wrapper" for="user-agreement">
+            <input class="checkbox visually-hidden" type="checkbox" name="user-agreement" id="user-agreement" checked/>
+            <label class="agreement-wrapper" for="user-agreement">
               <span class="agreement-checkbox">
                 <svg class="agreement-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the Privacy Policy
-              <a class="accent-text" href="./index.html" target="_blank">
+              I accept the terms and conditions of the 
+              <a class="agreement-link accent-text" href="./index.html" target="_blank">
                 Privacy Policy
               </a>
             </label>
           </div>
 
           <button class="btn bth-accent" type="submit">Send</button>
-        <form>
+        </form>
       </div>
     </div>
 
