--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <section class="hero-section">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button" data-modal-open>Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -479,22 +481,28 @@
           </ul>
         </div>
         <div class="footer-container-footer">
-         <p class="footer-text">Subscribe</p>
-         <form class="footer-form"               name="subscribe-form">
-           <label class="footer-label" for="user-email"   hidden>E-mail</label>
-           <input class="footer-input" type="text"  id="email" name="email" placeholder="E-mail"/>
-          <button class="footer-btn" type="submit">
-            Subscribe
-           <svg class="footer-btn-icon" width="24"  height="24">
-            <use href="./images/icons. svg#icon-icon-send">
-            </svg>
-          </button>
-         </form>
+          <p class="footer-text">Subscribe</p>
+          <form class="footer-form" name="subscribe-form">
+            <label class="footer-label" for="user-email" hidden>E-mail</label>
+            <input
+              class="footer-input"
+              type="text"
+              id="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
 
-<!-- BACKDROP -->
+    <!-- BACKDROP -->
 
     <div class="backdrop" data-modal>
       <div class="modal">
@@ -508,50 +516,82 @@
           Leave your contacts and we will call you back
         </p>
 
-        <form class="modal-form"  name="review">
+        <form class="modal-form" name="review">
           <div class="modal-form-field">
-           <label class="modal-form-label" for="user-name">Name</label>
+            <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-wrapper">
-             <input class="modal-form-input" type="text" id="user-name"  name="user-name"
-             required/>
+              <input
+                class="modal-form-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+                required
+              />
               <svg class="modal-form-icon" width="18" height="18">
-               <use href="./images/icons.svg#icon-person-black"></use>
+                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-           <label class="modal-form-label" for="user-phone">Phone namber</label>
+            <label class="modal-form-label" for="user-phone"
+              >Phone namber</label
+            >
             <div class="modal-form-wrapper">
-              <input class="modal-form-input" type="tel" id="user-phone" name="user-phone"/>
+              <input
+                class="modal-form-input"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-           <label  class="modal-form-label" for="email">Email</label>
+            <label class="modal-form-label" for="email">Email</label>
             <div class="modal-form-wrapper">
-             <input class="modal-form-input" type="email" id="user-email" name="user-email"/>
+              <input
+                class="modal-form-input"
+                type="email"
+                id="user-email"
+                name="user-email"
+              />
               <svg class="modal-form-icon" width="18" height="24">
-               <use href="./images/icons.svg#icon-email-black"></use>
+                <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
             <label class="modal-form-label" for="user-comment">Comment</label>
-           <textarea class="modal-form-message" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
+            <textarea
+              class="modal-form-message"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="form-agreement">
-            <input class="checkbox visually-hidden" type="checkbox" name="user-agreement" id="user-agreement" checked/>
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="user-agreement"
+              id="user-agreement"
+              checked
+            />
             <label class="agreement-wrapper" for="user-agreement">
               <span class="agreement-checkbox">
                 <svg class="agreement-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the 
-              <a class="agreement-link accent-text" href="./index.html" target="_blank">
+              I accept the terms and conditions of the
+              <a
+                class="agreement-link accent-text"
+                href="./index.html"
+                target="_blank"
+              >
                 Privacy Policy
               </a>
             </label>
