--- a/index.html
+++ b/index.html
@@ -483,14 +483,15 @@
         <div class="footer-container-footer">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form" name="subscribe-form">
-            <label class="footer-label" for="user-email" hidden>E-mail</label>
-            <input
-              class="footer-input"
-              type="text"
-              id="email"
-              name="email"
-              placeholder="E-mail"
-            />
+            <label class="footer-label" for="user-email">
+              <input
+                class="footer-input"
+                type="text"
+                id="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="footer-btn-icon" width="24" height="24">
@@ -543,13 +544,13 @@
                 id="user-phone"
                 name="user-phone"
               />
-              <svg class="modal-form-icon" width="18" height="24">
+              <svg class="modal-form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-form-label" for="email">Email</label>
+            <label class="modal-form-label" for="email">E-mail</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
