--- a/index.html
+++ b/index.html
@@ -483,10 +483,10 @@
         <div class="footer-container-footer">
           <p class="footer-text">Subscribe</p>
           <form class="footer-form" name="subscribe-form">
-            <label class="footer-label" for="user-email">
+            <label class="footer-label">
               <input
                 class="footer-input"
-                type="text"
+                type="email"
                 id="email"
                 name="email"
                 placeholder="E-mail"
@@ -534,9 +534,7 @@
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-form-label" for="user-phone"
-              >Phone namber</label
-            >
+            <label class="modal-form-label" for="user-phone"> Phone </label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
@@ -544,13 +542,13 @@
                 id="user-phone"
                 name="user-phone"
               />
-              <svg class="modal-form-icon" width="24" height="24">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-form-label" for="email">E-mail</label>
+            <label class="modal-form-label" for="email"> Email </label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
@@ -575,13 +573,13 @@
 
           <div class="form-agreement">
             <input
-              class="checkbox visually-hidden"
+              class="visually-hidden checkbox"
               type="checkbox"
-              name="user-agreement"
-              id="user-agreement"
-              checked
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
             />
-            <label class="agreement-wrapper" for="user-agreement">
+            <label class="agreement-wrapper" for="user-privacy">
               <span class="agreement-checkbox">
                 <svg class="agreement-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
