обновить все файлы

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
+          <div class="modal-form-com">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-message"
